# Finwatch

./: .coverage.claude.pid6.Xf7kUXqx.HK0d9rMFDRhh  .env.example  .flake8  .gitignore  PROJECT_STATUS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: Dockerfile  __init__.py  main.py  schemas.py
dashboard/: app.py  requirements.txt
docs/: literature_review.tex
finwatch/: __init__.py  constants.py  decision_engine.py  explainability.py  fairness.py  features.py  macro_data.py  models.py  preprocessor.py
finwatch/training/: __init__.py
monitoring/: __init__.py  psi_monitor.py
notebooks/: 01_EDA.ipynb
tests/: test_decision_engine.py  test_fairness.py  test_features.py  test_preprocessor.py
training/: train.py
