[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finwatch"
version = "0.1.0"
description = "Consumer Financial Vulnerability Early Warning System"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Barbara Werobaobayi", email = "barbarabracie@gmail.com" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["finwatch*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
