[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finwatch"
version = "0.1.0"
description = "Consumer Financial Vulnerability Early Warning System"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Barbara Werobaobayi", email = "barbarabracie@gmail.com" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["finwatch*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
# macro_data.py makes live HTTP calls to the ONS API - integration tested separately.
# models.py trains full ML models - too slow for unit tests, integration tested separately.
omit = [
    "finwatch/macro_data.py",
    "finwatch/models.py",
]
